--- a/about.html
+++ b/about.html
@@ -3,42 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me </title>
+    <title>About Me</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f4f4f4;
             color: #333;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             flex-direction: column;
-            scroll-behavior: smooth; /* Enables smooth scrolling */
+            height: auto;
+            overflow-x: hidden;
+            scroll-behavior: smooth;
         }
         header {
             background-color: #2c3e50;
             color: white;
-            padding: 20px;
+            padding: 30px 20px;
+            width: auto;
+            max-width: 1200px;
             text-align: center;
-            width: 100%;
-            max-width: 1200px; /* Ensure header fits within content */
+            border-radius: 8px;
+            animation: fadeInUp 1.5s ease-in-out;
+        }
+        header h1 {
+            font-size: 2.5rem;
+            animation: slideIn 1s ease-in-out;
         }
         section {
             padding: 20px;
             margin: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 1200px; /* Ensure section fits within content */
-            overflow-y: auto; /* Allow content to scroll if it's too long */
-            height: 90vh; /* Make sure content fits within screen */
+            background-color: #333;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            width: auto;
+            max-width: 1200px;
+            border-radius: 8px;
+            overflow-y: auto;
+            height: auto;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInSection 1.5s ease-out forwards;
         }
-        h2 {
+        section h2 {
             color: #2c3e50;
+            margin-bottom: 15px;
+            font-size: 1.8rem;
+            animation: fadeInLeft 1s ease-out;
+        }
+        section ul {
+            list-style-type: disc;
+            margin-left: 20px;
+            font-size: 1rem;
+            animation: fadeInUp 1.2s ease-in-out;
         }
         footer {
             background-color: #2c3e50;
@@ -46,14 +69,62 @@
             text-align: center;
             padding: 10px;
             width: 100%;
-            max-width: 1200px; /* Ensure footer fits within content */
+            max-width: 1200px;
+            margin-top: 20px;
+            border-radius: 8px;
         }
+
+        /* Keyframes for animations */
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInLeft {
+            from {
+                opacity: 0;
+                transform: translateX(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes fadeInSection {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateY(-50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
     </style>
 </head>
 <body>
 
 <header>
-    <h1>About me</h1>
+    <h1>About Me</h1>
 </header>
 
 <section>
