--- a/programming.html
+++ b/programming.html
@@ -178,7 +178,7 @@
     </section>
 
     <footer>
-        Designed with by (Samuel AKINGENEYE) | © 2025
+        Designed by (Samuel AKINGENEYE) | © 2025
     </footer>
 
     <div class="particles">
