--- a/other.html
+++ b/other.html
@@ -143,7 +143,7 @@
     </ul>
 
     <footer>
-        Designed by Fresh Talent in IT | Samuel AKINGENEYE | © 2025  
+     Samuel AKINGENEYE | © 2025  
     </footer>
 
     <div class="floating-bubbles">
