--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@
         #faq h2{
             color: yellowgreen;
         }
+        .faq-item p {
+            color:#fff;
+            font-weight: bold;
+        }
        
 
     </style>
