--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
         .faq-item h3 {
             color: #1e72a7;
             font-size: 1.6em;
+            font-weight: bold;
         }
 
         .faq-item a {
