--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
 
         /* Projects Section */
         .projects {
-            background-color: #d0e7f9;
             color: #333333;
             padding: 40px;
             border-radius: 8px;
@@ -130,6 +129,11 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
+        }
+
+        .project-card p {
+            color:#fff;
+            font-weight: bold;
         }
 
         .project-card:hover {
@@ -269,6 +273,14 @@
             }
         }
 
+        .faq {
+            background-color: #1e4a33;
+            text-align: center;
+            width: auto;
+            margin: auto;
+            padding: auto;
+        }
+
         .faq-item {
     
             padding: 20px;
@@ -343,7 +355,7 @@
             </section>
 
             <section class="projects" id="portfolio">
-                <h2><b>Skills</b></h2>
+                <h2><b>Skills:</b></h2>
                 <div class="project-card">
                     <h3>Programming skills</h3>
                     <p>I specialize in full-stack web development, cybersecurity, and data analysis, creating secure, efficient, and dynamic web applications.</p>
@@ -360,12 +372,12 @@
                     <a href="other.html">View skills</a>
                 </div>
             </section>
-
             <section class="contact" id="contact">
                 <h2>Contact Me</h2>
                 <p>If you have a project or idea, let's collaborate! Fill out this form: <a href="form.html" target="_blank"><button>Google Form</button></a> </p>
             </section>
 
+            <!--Frequently asked questions section-->
             <section class="faq" id="faq">
                 <h2>Frequently Asked Questions</h2>
                 <div class="faq-item">
