--- a/projects.html
+++ b/projects.html
@@ -139,6 +139,14 @@
             <a href="survey_form.html">View Project</a>
         </div>
         <div class="project-card">
+            <h3>Quiz App</h3>
+            <a href="quiz.app.html">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>To Do a List</h3>
+            <a href="to_do_list.html">View Project</a>
+        </div>
+        <div class="project-card">
             <h3>Product Landing Page</h3>
             <a href="product_landing_page.html">View Project</a>
         </div>
