--- a/resume.html
+++ b/resume.html
@@ -250,9 +250,9 @@
     <fieldset>
         <legend>Projects</legend>
         <ul>
-            <li><strong>Dynamic Weather App</strong> — Displays live weather data and forecasts. <a href="your-weather-app-link" target="_blank">View Project</a></li>
-            <li><strong>Real-Time Water Testing App</strong> — Monitors and visualizes water quality data. <a href="your-water-testing-link" target="_blank">View Project</a></li>
-            <li><strong>Portfolio Website</strong> — Personal website showcasing my work. <a href="your-portfolio-link" target="_blank">Visit Site</a></li>
+            <li><strong>Dynamic Weather App</strong> — Displays live weather data and forecasts. <a href="weather_app.html" target="_blank">View Project</a></li>
+            <li><strong>Real-Time Water Testing App</strong> — Monitors and visualizes water quality data. <a href="water_testing_app.html" target="_blank">View Project</a></li>
+            <li><strong>Portfolio Website</strong> — Personal website showcasing my work. <a href="index.html" target="_blank">Visit Site</a></li>
         </ul>
     </fieldset>
 
