--- a/resume.html
+++ b/resume.html
@@ -210,7 +210,8 @@
         <ul>
             <li>Responsive Web Design – FreeCodeCamp</li>
             <li>JavaScript Algorithms and Data Structures – FreeCodeCamp</li>
-            <li>Computer Fundamentals – [Certification Provider]</li>
+            <li>Computer Fundamentals</li>
+            <li>Outbreak investigations in health facilities - W.H.O</li>
         </ul>
     </fieldset>
 
@@ -218,22 +219,28 @@
         <h2>Certificates</h2>
         <div class="certificate">
           <h3>Responsive Web Design - FreeCodeCamp</h3>
-          <a href="/home/documents/My Documents/Certificates/Freecodecamp.org/Responsive Web Design.pdf" target="_blank">
+          <a href="Responsive Web Design.pdf">
             View/Download Certificate
           </a>
         </div>
         <div class="certificate">
           <h3>JavaScript - FreeCodeCamp</h3>
-          <a href="path/to/javascript-certificate.pdf" target="_blank">
+          <a href="Javascript Algorithm and Data Structures.pdf">
             View/Download Certificate
           </a>
         </div>
         <div class="certificate">
           <h3>Computer Fundamentals - Certificate</h3>
-          <a href="path/to/computer-fundamentals-certificate.pdf" target="_blank">
+          <a href="Computer foundamentals.pdf">
             View/Download Certificate
           </a>
         </div>
+        <div class="certificate">
+            <h3>W.H.O - Certificate</h3>
+            <a href="W.H.O Certificate.pdf">
+              View/Download Certificate
+            </a>
+          </div>
         <!-- Add more certificates as needed -->
       </section>
       
@@ -250,9 +257,9 @@
     <fieldset>
         <legend>Projects</legend>
         <ul>
-            <li><strong>Dynamic Weather App</strong> — Displays live weather data and forecasts. <a href="weather_app.html" target="_blank">View Project</a></li>
-            <li><strong>Real-Time Water Testing App</strong> — Monitors and visualizes water quality data. <a href="water_testing_app.html" target="_blank">View Project</a></li>
-            <li><strong>Portfolio Website</strong> — Personal website showcasing my work. <a href="index.html" target="_blank">Visit Site</a></li>
+            <li><strong>Dynamic Weather App</strong> — Displays live weather data and forecasts. <a href="weather_app.html">View Project</a></li>
+            <li><strong>Real-Time Water Testing App</strong> — Monitors and visualizes water quality data. <a href="water_testing_app.html" >View Project</a></li>
+            <li><strong>Portfolio Website</strong> — Personal website showcasing my work. <a href="index.html">Visit Site</a></li>
         </ul>
     </fieldset>
 
