--- a/other.html
+++ b/other.html
@@ -59,18 +59,12 @@
         li:hover {
             background-color: #74ebd5;
             color: #fff;
-            transform: scale(1.05);
-            border-radius: 10px;
         }
 
         li::before {
             content: '✨';
             font-size: 1.2rem;
             transition: transform 0.4s;
-        }
-
-        li:hover::before {
-            transform: rotate(360deg);
         }
 
         footer {
@@ -127,7 +121,7 @@
 </head>
 <body>
     <header>
-        <h1>Here are my other skills :🌟</h1>
+        <h1>Here are my other skills </h1>
     </header>
 
     <ul id="skill-list">
@@ -143,11 +137,10 @@
     </ul>
 
     <footer>
-     Samuel AKINGENEYE | © 2025  
+        Samuel AKINGENEYE | © 2025  
     </footer>
 
     <div class="floating-bubbles">
-        <!-- Bubbles for animation -->
         <span style="left: 10%; animation-duration: 12s;"></span>
         <span style="left: 30%; animation-duration: 15s;"></span>
         <span style="left: 50%; animation-duration: 18s;"></span>
