--- a/resume.html
+++ b/resume.html
@@ -249,8 +249,8 @@
     <fieldset>
         <legend>Education</legend>
         <p><strong>Bachelor of Science (Honours) in Environmental Health Sciences</strong><br>
-        [University Name] (In Progress)<br>
-        Level 2 (Expected Graduation: [Year])<br>
+        University of Rwanda <br>
+        Level 2 Expected graduation is 2027<br>
         Currently learning full-stack web development on FreeCodeCamp.org.</p>
     </fieldset>
 
