--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
       margin-top: 50px;
     }
     .cta button {
-      background: #4f46e5;
+      background: green;
       color: white;
       border: none;
       padding: 12px 30px;
@@ -64,7 +64,7 @@
       transition: background 0.3s;
     }
     .cta button:hover {
-      background: #3730a3;
+      background: greenyellow;
     }
     @keyframes fadeInUp {
       from { opacity: 0; transform: translateY(20px); }
