--- a/programming.html
+++ b/programming.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: "Poppins", sans-serif;
-            background: linear-gradient(135deg, #667eea, #764ba2); 
+            background: linear-gradient(135deg, #0c2c19, #302f0f); 
             color: #fff;
             overflow-x: hidden;
             position: relative;
@@ -18,7 +18,6 @@
         header {
             text-align: center;
             padding: 80px 20px 40px;
-            animation: fadeInDown 1.5s ease;
         }
 
         header h1 {
@@ -41,14 +40,6 @@
             border-radius: 20px;
             backdrop-filter: blur(10px);
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
-            opacity: 0;
-            transform: translateY(50px);
-            transition: all 1s ease-in-out;
-        }
-
-        section.visible {
-            opacity: 1;
-            transform: translateY(0);
         }
 
         h2 {
@@ -73,9 +64,7 @@
             text-align: center;
             font-weight: 600;
             color: #fff;
-            cursor: pointer;
             position: relative;
-            transition: all 0.4s;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
 
@@ -84,17 +73,6 @@
             display: block;
             font-size: 1.8rem;
             margin-bottom: 8px;
-            transition: transform 0.4s;
-        }
-
-        li:hover {
-            background-color: #ffb347;
-            color: #333;
-            transform: translateY(-8px) scale(1.05);
-        }
-
-        li:hover::before {
-            transform: rotate(360deg);
         }
 
         footer {
@@ -127,11 +105,6 @@
             }
         }
 
-        @keyframes fadeInDown {
-            from { opacity: 0; transform: translateY(-40px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
         @media(max-width: 768px) {
             header h1 {
                 font-size: 2.4rem;
@@ -149,7 +122,7 @@
 </head>
 <body>
     <header>
-        <h1>My Programming Skills 🚀</h1>
+        <h1>My Programming Skills </h1>
         <p>As a passionate full-stack developer, I specialize in building innovative and scalable web & mobile applications.</p>
     </header>
 
@@ -178,7 +151,7 @@
     </section>
 
     <footer>
-        Designed by (Samuel AKINGENEYE) | © 2025
+        Samuel AKINGENEYE | © 2025
     </footer>
 
     <div class="particles">
@@ -189,28 +162,5 @@
         <span style="left: 75%; width: 16px; height: 16px; animation-duration: 19s;"></span>
         <span style="left: 90%; width: 12px; height: 12px; animation-duration: 14s;"></span>
     </div>
-
-    <script>
-        // Animate each section when it enters view
-        window.addEventListener('scroll', () => {
-            const sections = document.querySelectorAll('section');
-            sections.forEach(section => {
-                const rect = section.getBoundingClientRect();
-                if (rect.top < window.innerHeight - 100) {
-                    section.classList.add('visible');
-                }
-            });
-        });
-
-        window.addEventListener('load', () => {
-            const sections = document.querySelectorAll('section');
-            sections.forEach(section => {
-                const rect = section.getBoundingClientRect();
-                if (rect.top < window.innerHeight - 100) {
-                    section.classList.add('visible');
-                }
-            });
-        });
-    </script>
 </body>
 </html>
