--- a/projects.html
+++ b/projects.html
@@ -60,14 +60,14 @@
         .project-card a {
             text-decoration: none;
             color: #fff;
-            background-color: #4CAF50;
+            background-color: rgb(16, 66, 68);
             padding: 10px 20px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
 
         .project-card a:hover {
-            background-color: #45a049;
+            background-color: greenyellow;
         }
 
         /* Media Queries for Responsiveness */
