--- a/water_testing_app.html
+++ b/water_testing_app.html
@@ -32,6 +32,9 @@
             margin-bottom: 15px;
             font-size: 16px;
         }
+        select {
+            font-size: 16px;
+        }
         button {
             width: 100%;
             padding: 12px;
@@ -55,11 +58,6 @@
         .result p {
             margin: 5px 0;
         }
-        @media screen and (max-width: 500px) {
-            .container {
-                padding: 20px;
-            }
-        }
     </style>
 </head>
 <body>
@@ -68,6 +66,19 @@
     <input type="number" id="phValue" placeholder="Enter pH level (0-14)">
     <input type="number" id="turbidityValue" placeholder="Turbidity (NTU)">
     <input type="number" id="chlorineValue" placeholder="Chlorine Level (mg/L)">
+    <input type="number" id="tssValue" placeholder="TSS (mg/L)">
+    <input type="number" id="tdsValue" placeholder="TDS (mg/L)">
+    <input type="number" id="doValue" placeholder="Dissolved Oxygen (mg/L)">
+    <select id="eColiTest">
+        <option value="">E.coli presence?</option>
+        <option value="absent">Absent</option>
+        <option value="present">Present</option>
+    </select>
+    <select id="parasiteTest">
+        <option value="">Parasites detected?</option>
+        <option value="no">No</option>
+        <option value="yes">Yes</option>
+    </select>
     <select id="waterSource">
         <option value="">Select Water Source</option>
         <option value="tap">Tap Water</option>
@@ -85,9 +96,14 @@
         const ph = parseFloat(document.getElementById('phValue').value);
         const turbidity = parseFloat(document.getElementById('turbidityValue').value);
         const chlorine = parseFloat(document.getElementById('chlorineValue').value);
+        const tss = parseFloat(document.getElementById('tssValue').value);
+        const tds = parseFloat(document.getElementById('tdsValue').value);
+        const doValue = parseFloat(document.getElementById('doValue').value);
+        const eColi = document.getElementById('eColiTest').value;
+        const parasites = document.getElementById('parasiteTest').value;
         const source = document.getElementById('waterSource').value;
 
-        if (isNaN(ph) || isNaN(turbidity) || isNaN(chlorine) || !source) {
+        if (isNaN(ph) || isNaN(turbidity) || isNaN(chlorine) || isNaN(tss) || isNaN(tds) || isNaN(doValue) || !eColi || !parasites || !source) {
             alert('Please fill out all fields correctly.');
             return;
         }
@@ -95,6 +111,11 @@
         let phStatus = ph >= 6.5 && ph <= 8.5 ? "Good" : "Poor";
         let turbidityStatus = turbidity <= 5 ? "Clear" : "Cloudy";
         let chlorineStatus = chlorine <= 4 ? "Safe" : "Too High";
+        let tssStatus = tss <= 30 ? "Normal" : "High";
+        let tdsStatus = tds <= 500 ? "Safe" : "High";
+        let doStatus = doValue >= 5 ? "Healthy" : "Low Oxygen";
+        let eColiStatus = eColi === "absent" ? "Safe" : "Contaminated";
+        let parasiteStatus = parasites === "no" ? "Safe" : "Contaminated";
 
         const resultHTML = `
             <h2>Test Results</h2>
@@ -102,6 +123,11 @@
             <p><strong>pH Level:</strong> ${ph} (${phStatus})</p>
             <p><strong>Turbidity:</strong> ${turbidity} NTU (${turbidityStatus})</p>
             <p><strong>Chlorine Level:</strong> ${chlorine} mg/L (${chlorineStatus})</p>
+            <p><strong>Total Suspended Solids (TSS):</strong> ${tss} mg/L (${tssStatus})</p>
+            <p><strong>Total Dissolved Solids (TDS):</strong> ${tds} mg/L (${tdsStatus})</p>
+            <p><strong>Dissolved Oxygen (DO):</strong> ${doValue} mg/L (${doStatus})</p>
+            <p><strong>E.coli Test:</strong> ${eColiStatus}</p>
+            <p><strong>Parasites:</strong> ${parasiteStatus}</p>
         `;
 
         document.getElementById('waterResult').innerHTML = resultHTML;
