--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f4f8;
+            background-color: #155837;
             color: #333;
         }
 
@@ -68,6 +68,7 @@
 
         .project-card a:hover {
             background-color: greenyellow;
+            
         }
 
         /* Media Queries for Responsiveness */
