--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
         <div class="right">
             <div class="welcome">
-                <h1 class="head">Welcome to my portifolio</h1>
+                <h1 class="head">Welcome to my portfolio</h1>
             </div>
             <section class="about" id="about">
                 <h2>About Me</h2>
