--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
         }
 
         .project-card {
-            background-color: #fff;
+            background-color: #45174e;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             margin: 15px;
