--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,7 @@
             flex-direction: column;
             justify-content: space-between;
             opacity: 0;
+            color: white;
         }
 
         .project-card.visible {
