--- a/index.html
+++ b/index.html
@@ -401,7 +401,12 @@
                     <p>You can reach me through the <a href="contact.html">Contact</a> section, or email me directly at <a href="mailto:freshtalent491@gmail.com">freshtalent491@gmail.com</a>.</p>
                 </div>
             </section>
+            <a href="https://wa.me/250790663921" class="whatsapp-button">
+                <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp" width="50">
+                <span class="whatsapp-text">Chat with Samuel</span>
+            </a>
             
+  
 
             <footer>
                 <div class="social-links">
@@ -417,6 +422,10 @@
             </footer>
         </div>
     </div>
+
+    <!--External javasscript-->
+    <script src="script.js"></script>
+
 
     <!-- JS for Form Validation (Optional) -->
     <script>
