--- a/water_testing_app.html
+++ b/water_testing_app.html
@@ -113,7 +113,7 @@
         let chlorineStatus = chlorine <= 4 ? "Safe" : "Too High";
         let tssStatus = tss <= 30 ? "Normal" : "High";
         let tdsStatus = tds <= 500 ? "Safe" : "High";
-        let doStatus = doValue >= 5 ? "Healthy" : "Low Oxygen";
+        let doStatus = doValue >= 5 ? "Healthy" : "Low Oxygen, Unhealthy";
         let eColiStatus = eColi === "absent" ? "Safe" : "Contaminated";
         let parasiteStatus = parasites === "no" ? "Safe" : "Contaminated";
 
