--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         /* Global Styles */
         body {
@@ -29,7 +30,7 @@
         }
 
         .project-card {
-            background-color: #45174e;
+            background: rgba(0, 0, 0, 0.5);
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             margin: 15px;
@@ -61,7 +62,7 @@
         .project-card a {
             text-decoration: none;
             color: #fff;
-            background-color: rgb(16, 66, 68);
+            background-color:green;
             padding: 10px 20px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
