--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
         }
 
         .project-card h3 {
-            color: #1e72a7;
+            color: blue;
             font-size: 1.6em;
         }
 
         .project-card a {
-            color: #1e72a7;
+            color:white;
             font-weight: bold;
             transition: text-decoration 0.3s ease;
         }
@@ -418,13 +418,15 @@
     <button type="button" class="search-btn" onclick="searchProjects()">Search</button>
      <!-- Search Icon -->
   </div>
-    
 
-        <div class="right">
-            <div class="welcome">
-                <h1 class="head">Hello, I'm Samuel AKINGENEYE<br>
-                Full-stack web developer | Cybersecurity Enthusiast | Data Analyst | Environmental Health Practicioner.</h1>
-            </div>
+  <section class="hero">
+    <div class="overlay"></div>
+    <h1 class="head">
+        Hello, I'm Samuel AKINGENEYE <br>
+        <span class="animated-text">Full-stack Web Developer | Cybersecurity Enthusiast | Data Analyst | Environmental Health Practitioner.</span>
+    </h1>
+</section>
+
             <section class="cta">
                 <div class="cta-content">
                   <h2>Check Out My Projects</h2>
