--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
 
         li a:hover {
-            background-color: #111;
+            background-color: orangered;
         }
 
         /* Hero Section */
@@ -82,7 +82,8 @@
         }
 
         .cta-buttons a:hover {
-            background-color: #1e4a33;
+            background-color: orangered;
+            transform: scale(1.05);
         }
 
         /* About Section */
@@ -118,7 +119,7 @@
         }
 
         .projects h2 {
-            color: #1e72a7;
+            color: #00bcd4;;
             font-size: 2em;
         }
 
@@ -141,7 +142,7 @@
         }
 
         .project-card h3 {
-            color: blue;
+            color: #00bcd4;;
             font-size: 1.6em;
         }
 
@@ -152,7 +153,7 @@
         }
 
         .project-card a:hover {
-            text-decoration: underline;
+            background-color: orangered;
         }
 
         
@@ -182,7 +183,10 @@
         }
 
         .contact button:hover {
-            background-color: #1e4a33;
+            background-color: #8ba848;
+        }
+        .contact h2 {
+            color: #00bcd4;
         }
 
         /* Footer */
@@ -201,6 +205,7 @@
         }
 
         .social-links a:hover {
+            color: orangered;
             transform: scale(1.2);
         }
 
@@ -257,7 +262,7 @@
         }
 
         .head {
-            background: rgba(0, 0, 0, 0.8);
+            color:#00bcd4;
             height: auto;
             width: auto;
             margin: 0%;
@@ -287,6 +292,7 @@
     text-align: center;
     font-size: 2rem;
     margin-bottom: 20px;
+    color: #00bcd4;
 }
 
 .faq-item {
@@ -379,6 +385,9 @@
   opacity: 0;
   transform: translateY(30px);
   animation: fadeInUp 1.5s ease-out forwards;
+}
+.cta-content h2 {
+    color: #00bcd4;
 }
 
 @keyframes fadeInUp {
