--- a/projects.html
+++ b/projects.html
@@ -13,13 +13,17 @@
             padding: 0;
             background-color: #155837;
             color: #333;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
         }
 
         h2 {
             text-align: center;
             font-size: 2.5em;
             margin-top: 50px;
-            color: #333;
+            color: #fff;
+            flex-shrink: 0;
         }
 
         .projects {
@@ -27,6 +31,8 @@
             flex-wrap: wrap;
             justify-content: space-around;
             padding: 20px;
+            flex-grow: 1;
+            overflow-y: auto;
         }
 
         .project-card {
@@ -56,13 +62,20 @@
 
         .project-card h3 {
             font-size: 1.5em;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+            color: rgb(48, 48, 121);
+        }
+
+        .project-card p {
+            font-size: 0.9em;
+            margin-bottom: 15px;
+            color: #ddd;
         }
 
         .project-card a {
             text-decoration: none;
             color: #fff;
-            background-color:green;
+            background-color: green;
             padding: 10px 20px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
@@ -70,7 +83,6 @@
 
         .project-card a:hover {
             background-color: greenyellow;
-            
         }
 
         /* Media Queries for Responsiveness */
@@ -119,58 +131,72 @@
 
         <div class="project-card">
             <h3>Weather App</h3>
+            <p>A web app that displays real-time weather updates based on the user's location or a search query.</p>
             <a href="weather_app.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Water Testing App</h3>
+            <p>An app for monitoring water quality, helping users track essential water parameters for safety.</p>
             <a href="water_testing_app.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Dynamic Websites</h3>
+            <p>Custom websites that adapt dynamically, providing a tailored user experience through interactive elements.</p>
             <a href="#">View Project</a>
         </div>
         <div class="project-card">
             <h3>Personal Portfolio Webpage</h3>
+            <p>A showcase of my web development work and projects, designed to highlight my skills and achievements.</p>
             <a href="index.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Technical Documentation Page</h3>
+            <p>A documentation page that provides clear and organized instructions for using software or tools effectively.</p>
             <a href="technical_documentation_page.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Survey Form</h3>
+            <p>A form to collect user responses, designed with best practices in form validation and user input.</p>
             <a href="survey_form.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Quiz App</h3>
+            <p>An interactive quiz app to challenge users with trivia questions and provide instant feedback.</p>
             <a href="quiz.app.html">View Project</a>
         </div>
         <div class="project-card">
-            <h3>To Do a List</h3>
+            <h3>To Do List</h3>
+            <p>A simple task manager that allows users to add, mark, and delete tasks in an intuitive interface.</p>
             <a href="to_do_list.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Product Landing Page</h3>
+            <p>A responsive page designed to market a product, featuring call-to-action buttons and product details.</p>
             <a href="product_landing_page.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Javascript Calculator</h3>
+            <p>A functional calculator built with JavaScript, handling basic arithmetic operations for user convenience.</p>
             <a href="javascript_calculator.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Pomodoro Clock</h3>
+            <p>A time management tool based on the Pomodoro technique, designed to increase productivity and focus.</p>
             <a href="pomodoro_clock.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Quote Generator</h3>
+            <p>A random quote generator that displays a new inspirational quote with each click or refresh.</p>
             <a href="quote_generator.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>E-commerce Website</h3>
+            <p>A fully functional online store, featuring product listings, shopping cart, and checkout functionalities.</p>
             <a href="e_commerce_website.html">View Project</a>
         </div>
         <div class="project-card">
             <h3>Job Board Application</h3>
+            <p>A job listing app where employers can post vacancies and users can search for job opportunities.</p>
             <a href="job_board_application.html">View Project</a>
         </div>
     </section>
